
HtmlEmailPublisher
----------------------
* Fixed a bug where username & password were ignored

JMX
----------------------
* Now exposing Project status (read-only) in the jmx interface

log4j.properties
----------------------
* Added more information into the console log including the timestamp - Patch by Mark Richters
* Added a rotating file log - Patch by Mark Richters

ProjectXMLHelper
----------------------
* Fixed a bug where if the log element existed dir was a required attribute

StarTeamBootstrapper
----------------------
* StarTeamBootstrapper submitted by Lee Marlow

CruiseControl Release Notes - 2.1.1

main/build.xml
----------------------
* update version to 2.1

reporting/jsp/build.xml
----------------------
* Filter token for build artifacts was missing  - Fixed by Jason Yip

cruisecontrol-jsp12.tld
----------------------
* Fixed closing tag-class, tei-class and body-content tags for ArtifactsLinkTag. - Found by Dan Rollo

Project
----------------------
* Fixed bug where a paused build would never resume.

CruiseControl Release Notes - 2.1

ArtifactsPublisher
----------------------
* New functionality to allow for creation of a "build artifacts" directory. This directory can have artifacts published to it - things like jars that were built, documents that were published, etc. Then, these artifacts can be linked to from the CC webapp. - Submitted by Mike Rettig

AntBuilder
---------------------
* Added antWorkingDir attribute. - Patch by Brett Wooldridge
* Added support for multiple targets. (target="clean build")  - Patch by Josh Knowles
* Added useDebug attribute. This replaces test of log4j setting to get debug level ant output.  - Patch by Jeffrey Fredrick
* Save ant log if it can't be read.  Handles case when ant log produces invalid XML. - Patch by Richard Burgess
* 'target' attribute optional; will run default target in build.xml
* 'buildfile' attribute options; defaults to build.xml

Builder (includes AntBuilder)
----------------------